--- a/UI/package.json
+++ b/UI/package.json
@@ -9,23 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/dompurify": "^3.0.5",
+    "@types/react-datepicker": "^4.19.5",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.12",
+    "isomorphic-dompurify": "^2.26.0",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.536.0",
     "next": "15.4.5",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
     "react-datepicker": "^4.25.0",
+    "react-dom": "19.1.0",
     "react-hot-toast": "^2.4.1",
     "react-select": "^5.8.0",
-    "lodash.debounce": "^4.0.8",
     "swr": "^2.3.4",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^3.4.17",
-    "@types/react-datepicker": "^4.19.5"
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
